@@ -72,7 +72,19 @@ typedef enum {
     RSVG_COMP_OP_DST_OUT,
     RSVG_COMP_OP_SRC_ATOP,
     RSVG_COMP_OP_DST_ATOP,
-    RSVG_COMP_OP_XOR
+    RSVG_COMP_OP_XOR,
+    RSVG_COMP_OP_PLUS,
+    RSVG_COMP_OP_MULTIPLY,
+    RSVG_COMP_OP_SCREEN,
+    RSVG_COMP_OP_OVERLAY,
+    RSVG_COMP_OP_DARKEN,
+    RSVG_COMP_OP_LIGHTEN,
+    RSVG_COMP_OP_COLOR_DODGE,
+    RSVG_COMP_OP_COLOR_BURN,
+    RSVG_COMP_OP_HARD_LIGHT,
+    RSVG_COMP_OP_SOFT_LIGHT,
+    RSVG_COMP_OP_DIFFERENCE,
+    RSVG_COMP_OP_EXCLUSION
 } RsvgCompOpType;
 
 typedef enum {
